--- a/eventos/index.html
+++ b/eventos/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div id="app">
-    
+    <button v-on:click="sumar">Sumar 1</button>
+    <button @click="restar">Restar 1</button>
+    El contador está en {{ contador }}
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -16,20 +18,14 @@
     let app = new Vue({
       el: '#app',
       data: {
-        titulo: 'Estás en Platzi',
-        subtitulo: 'Estás viendo el curso de Vue.js'
+        contador: 0
       },
-      filters: {
-        uppercase: function (str) {
-          return str.toUpperCase();
+      methods: {
+        sumar: function () {
+          this.contador++;
         },
-        lowercase: function (str) {
-          return str.toLowerCase();
-        },
-        capitalize: function (str) {
-          return str.split(' ')
-                    .map(x => x[0].toUpperCase() + x.slice(1).toLowerCase())
-                    .join(' ');
+        restar: function () {
+          this.contador--;
         }
       }
     })
